# whisper-typer

./: LICENSE  Makefile  pyproject.toml  whisper-typer
.github/workflows/: validate-branch.yaml
