[tool.poetry]
name = "whisper-typer"
version = "0.2.0"
description = "Type with your voice"
authors = ["Sergey Machulskis <sergeym@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.6"
pvrecorder = "^1.2.0"
openai-whisper = "^v20231117"
torch = "^2.1.1" # https://github.com/pytorch/pytorch/issues/100974
boombox = "^0.56"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
