[tool.poetry]
name = "whisper-typer"
version = "0.2.0"
description = "Type with your voice"
authors = ["Sergey Machulskis <sergeym@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.6"
pvrecorder = "^1.2.0"
openai-whisper = "^v20231117"
torch = "^2.1.1" # https://github.com/pytorch/pytorch/issues/100974
boombox = "^0.56"

[tool.poetry.group.dev.dependencies]
black = "23.10.1"
autoflake = "^2.2.1"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "1.6.1"

[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = ""

[tool.mypy]
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
